JumpScript/tests/baselines/reference/disallowLineTerminatorBeforeArrow.errors.txt
tests/cases/conformance/es6/arrowFunction/disallowLineTerminatorBeforeArrow.jump(2,5): error TS1200: Line terminator not permitted before arrow.
tests/cases/conformance/es6/arrowFunction/disallowLineTerminatorBeforeArrow.jump(4,7): error TS1200: Line terminator not permitted before arrow.
tests/cases/conformance/es6/arrowFunction/disallowLineTerminatorBeforeArrow.jump(6,5): error TS1200: Line terminator not permitted before arrow.
tests/cases/conformance/es6/arrowFunction/disallowLineTerminatorBeforeArrow.jump(8,7): error TS1200: Line terminator not permitted before arrow.
tests/cases/conformance/es6/arrowFunction/disallowLineTerminatorBeforeArrow.jump(10,5): error TS1200: Line terminator not permitted before arrow.
tests/cases/conformance/es6/arrowFunction/disallowLineTerminatorBeforeArrow.jump(12,7): error TS1200: Line terminator not permitted before arrow.
tests/cases/conformance/es6/arrowFunction/disallowLineTerminatorBeforeArrow.jump(14,5): error TS1200: Line terminator not permitted before arrow.
tests/cases/conformance/es6/arrowFunction/disallowLineTerminatorBeforeArrow.jump(16,7): error TS1200: Line terminator not permitted before arrow.
tests/cases/conformance/es6/arrowFunction/disallowLineTerminatorBeforeArrow.jump(18,5): error TS1200: Line terminator not permitted before arrow.
tests/cases/conformance/es6/arrowFunction/disallowLineTerminatorBeforeArrow.jump(21,5): error TS1200: Line terminator not permitted before arrow.
tests/cases/conformance/es6/arrowFunction/disallowLineTerminatorBeforeArrow.jump(23,8): error TS1200: Line terminator not permitted before arrow.
tests/cases/conformance/es6/arrowFunction/disallowLineTerminatorBeforeArrow.jump(26,8): error TS1200: Line terminator not permitted before arrow.
tests/cases/conformance/es6/arrowFunction/disallowLineTerminatorBeforeArrow.jump(52,5): error TS1200: Line terminator not permitted before arrow.
tests/cases/conformance/es6/arrowFunction/disallowLineTerminatorBeforeArrow.jump(54,5): error TS1200: Line terminator not permitted before arrow.
tests/cases/conformance/es6/arrowFunction/disallowLineTerminatorBeforeArrow.jump(59,13): error TS1200: Line terminator not permitted before arrow.
tests/cases/conformance/es6/arrowFunction/disallowLineTerminatorBeforeArrow.jump(63,13): error TS1200: Line terminator not permitted before arrow.
tests/cases/conformance/es6/arrowFunction/disallowLineTerminatorBeforeArrow.jump(68,13): error TS1200: Line terminator not permitted before arrow.
tests/cases/conformance/es6/arrowFunction/disallowLineTerminatorBeforeArrow.jump(72,9): error TS1200: Line terminator not permitted before arrow.


==== tests/cases/conformance/es6/arrowFunction/disallowLineTerminatorBeforeArrow.jump (18 errors) ====
    var f1 = ()
        => { }
        ~~
!!! error TS1200: Line terminator not permitted before arrow.
    var f2 = (x: string, y: string) /*
      */  => { }
          ~~
!!! error TS1200: Line terminator not permitted before arrow.
    var f3 = (x: string, y: number, ...rest)
        => { }
        ~~
!!! error TS1200: Line terminator not permitted before arrow.
    var f4 = (x: string, y: number, ...rest) /*
      */  => { }
          ~~
!!! error TS1200: Line terminator not permitted before arrow.
    var f5 = (...rest)
        => { }
        ~~
!!! error TS1200: Line terminator not permitted before arrow.
    var f6 = (...rest) /*
      */  => { }
          ~~
!!! error TS1200: Line terminator not permitted before arrow.
    var f7 = (x: string, y: number, z = 10)
        => { }
        ~~
!!! error TS1200: Line terminator not permitted before arrow.
    var f8 = (x: string, y: number, z = 10) /*
      */  => { }
          ~~
!!! error TS1200: Line terminator not permitted before arrow.
    var f9 = (a: number): number
        => a;
        ~~
!!! error TS1200: Line terminator not permitted before arrow.
    var f10 = (a: number) :
      number
        => a
        ~~
!!! error TS1200: Line terminator not permitted before arrow.
    var f11 = (a: number): number /*
        */ => a;
           ~~
!!! error TS1200: Line terminator not permitted before arrow.
    var f12 = (a: number) :
      number /*
        */ => a
           ~~
!!! error TS1200: Line terminator not permitted before arrow.
    
    // Should be valid.
    var f11 = (a: number
        ) => a;
    
    // Should be valid.
    var f12 = (a: number)
        : number => a;
    
    // Should be valid.
    var f13 = (a: number):
        number => a;
    
    // Should be valid.
    var f14 = () /* */ => {}
    
    // Should be valid.
    var f15 = (a: number): number /* */ => a
    
    // Should be valid.
    var f16 = (a: number, b = 10):
      number /* */ => a + b;
    
    function foo(func: () => boolean) { }
    foo(()
        => true);
        ~~
!!! error TS1200: Line terminator not permitted before arrow.
    foo(()
        => { return false; });
        ~~
!!! error TS1200: Line terminator not permitted before arrow.
    
    module m {
        class City {
            constructor(x: number, thing = ()
                => 100) {
                ~~
!!! error TS1200: Line terminator not permitted before arrow.
            }
    
            public m = ()
                => 2 * 2 * 2
                ~~
!!! error TS1200: Line terminator not permitted before arrow.
        }
    
        export enum Enum {
            claw = (()
                => 10)()
                ~~
!!! error TS1200: Line terminator not permitted before arrow.
        }
    
        export var v = x
            => new City(Enum.claw);
            ~~
!!! error TS1200: Line terminator not permitted before arrow.
    }
    